﻿=========================
THE HISTORY OF PSYCHOBALL
=========================

************************
(xx/xx/2013) Patch 0.9.0
************************

-Changes on text placement
-Added a menu
	-Transition between screens
	-New screen for Controls
	-Regular mode is now Survivor
	-From pause or death screen you can go back to menu
-Added random pause messages
-Added new death messages
-Added new type of enemy: suPerbALLs 
-Changes on how score works
	-It counts how many points you've made
	-You no longer dies if you score hits 0
-Changes on "Lsd worn out" effect

************************
(11/05/2013) Patch 0.8.0
************************

-Major change on the script
	-"Cleaner" code
	-More annotations
-Added "Ultrablast Charge"
-Added sound controller
	-You can press 'm' to mute the game
	-You can press ',' or '.' to decrease or increase the volume
	-Added images representing current sound level
-Added the logo
-Added slow-motion effect on death
-Added version checker
-Added devmode
-Added hidden easter-egg: "ghost mode"
	-Lets you know if there is a newer version available at the site
	-Timeouts if it doesn't get any info from the site after a set time
-You can't leave the screen anymore
-Explosion particles have the colour of their "origin"
-Changes on text placement
-More death messages
	-Getting "LSD worn out" effect is more difficult
	-Leaving "LSD worn out" effect is more common
-Changed 10x multiplier colour effect

************************
(25/04/2013) Patch 0.7.9
************************

-Fixed generic sound bugs
-Added instructions to "Ultrablast"
-Some new death messages
-Tweaks on multiplier effects on score
    -Multiplier on losing points slightly reduced
    -Multiplier on wining points slightly increased

************************
(17/04/2013) Patch 0.7.8
************************

-First release of PsyChObALL!

++++++++++++++++++++++++++++++++++++
A GAME BY MARVELLOUS SOFT/USPGAMEDEV