@@ -1,0 +1,12 @@
+------------------
+LICENSE AGREEMENT
+------------------
+
+Font may be used for personal or commercial purposes, however it may not be redistributed or sold.
+
+****************************************
+# Font: Nevis                          #
+# Made by: Ed Merritt                  #
+****************************************
+We do not own any this font. For more info on it's license and the author, check here: 
+http://tenbytwenty.com/?xxxx_posts=nevis
